@@ -1,3 +1,7 @@
+2007-03-07  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valaclass.vala: implement get_type_parameter_index
+
 2007-03-07  Raffaele Sandrini  <rasa@gmx.ch>
 
 	* vala/valasemanticanalyzer.vala: check whether a class implements all
